5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1593_2908.log
== TEST (2019-03-26 10:11:24) 
-- CODE:
var1=float(input("digite sua variavel 1: "))
var2=float(input("digite sua variavel 2: "))
var=float(input("digite sua variavel 3: "))
total= (var1**2+var2**2+var3**2)/(var1+var2+var3)
print(round(total,7)
-- ERROR:
File "XXXX", line 6
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:11:39) 
-- CODE:
var1=float(input("digite sua variavel 1: "))
var2=float(input("digite sua variavel 2: "))
var=float(input("digite sua variavel 3: "))
total= (var1**2+var2**2+var3**2)/(var1+var2+var3)
print(round(total,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= (var1**2+var2**2+var3**2)/(var1+var2+var3)
NameError: name 'var3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:11:52) 
-- CODE:
var1=float(input("digite sua variavel 1: "))
var2=float(input("digite sua variavel 2: "))
var3=float(input("digite sua variavel 3: "))
total= (var1**2+var2**2+var3**2)/(var1+var2+var3)
print(round(total,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:11:57) 
-- CODE:
var1=float(input("digite sua variavel 1: "))
var2=float(input("digite sua variavel 2: "))
var3=float(input("digite sua variavel 3: "))
total= (var1**2+var2**2+var3**2)/(var1+var2+var3)
print(round(total,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:12:04) 
-- CODE:
var1=float(input("digite sua variavel 1: "))
var2=float(input("digite sua variavel 2: "))
var3=float(input("digite sua variavel 3: "))
total= (var1**2+var2**2+var3**2)/(var1+var2+var3)
print(round(total,7))
-- EXECUTION TIME:
0.125814
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:06:05) 
-- CODE:
n= float(input("qn"))
print (factorial(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (factorial(n))
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:06:41) 
-- CODE:
from math import*
n= float(input("qn"))
q= (factorial(n))
print(q)
-- OUTPUT:
2432902008176640000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:06:47) 
-- CODE:
from math import*
n= float(input("qn"))
q= (factorial(n))
print(q)
-- OUTPUT:
2432902008176640000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
